[gd_scene load_steps=3 format=3 uid="uid://cicjqfp6nj26l"]

[ext_resource type="Script" path="res://objects/interactive_ui/interactive_ui.gd" id="1_7uehm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6q31p"]
content_margin_left = 5.0
content_margin_right = 5.0
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="InteractiveUI" type="PanelContainer"]
custom_minimum_size = Vector2(200, 64)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uehm")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="ItemName" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Название"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="ItemDesc" type="Label" parent="Margin/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Действие"
horizontal_alignment = 1

[node name="Icon" type="PanelContainer" parent="Margin/VBox/HBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6q31p")

[node name="Key" type="Label" parent="Margin/VBox/HBox/Icon"]
layout_mode = 2
text = "E"
horizontal_alignment = 1
